# QA_automation_rust

./: .env  .gitignore  Cargo.toml  README.md  junit.xml  uuid.json
config/: dev.yaml  staging.yaml
crates/api_tests/: Cargo.toml  README.md
crates/api_tests/docs/: lead_stage_uuid.json  lead_uuid.txt  profile_uuid.txt  service_type_uuid.json
crates/api_tests/src/: client.rs  lib.rs
crates/api_tests/src/api/: auth_api.rs  create_invoice.rs  elder_data_edit_api.rs  lead_create.rs  lead_notes.rs  lead_stage_update.rs  mod.rs
crates/api_tests/src/api/Auth/: auth_api.rs  mod.rs
crates/api_tests/src/api/CreateLead/: lead_create.rs  mod.rs
crates/api_tests/src/api/GlobalUser/: current_user.rs
crates/api_tests/src/api/Invoices/: mod.rs  pos_checkout.rs  pos_get_customer.rs  pos_items_all.rs  update_pos_cart_item.rs  void_invoice.rs
crates/api_tests/src/api/ProfileActions/: elder_data_edit_api.rs  lead_stage_update.rs  mod.rs
crates/api_tests/src/api_context/: api_context.rs  mod.rs
crates/api_tests/src/models/: common.rs
crates/api_tests/src/reporting/: html_reporter.rs  mod.rs  reporter.rs  test_collector.rs  types.rs
crates/api_tests/src/request/: lead.rs  lead_notes_request.rs  mod.rs
crates/api_tests/src/request_response/: auth.rs  elder_data_edit.rs  mod.rs
crates/api_tests/src/request_response/Invoice_request_response/: create_invoice_request.rs  mod.rs  pos_cart_update_request.rs  pos_checkout_request.rs  pos_get_customer_response.rs  pos_items_response.rs
crates/api_tests/src/request_response/user_actions/: lead.rs  lead_stage_update_request.rs  mod.rs
crates/api_tests/src/tests/: pos_checkout_test.rs
crates/api_tests/src/utils/: assertions.rs  factories.rs  mod.rs  retry.rs
crates/e2e_tests/: Cargo.toml
crates/e2e_tests/src/: create_invoice.rs  create_lead.rs  lib.rs  login.rs
crates/e2e_tests/src/utils/: dashboard_button.rs  drop_down_select.rs  retry.rs
crates/lib_test_helpers/: Cargo.toml
crates/lib_test_helpers/src/: chrome_driver.rs  config.rs  driver.rs  lib.rs  session_file.rs
crates/load_tests/: Cargo.toml
crates/load_tests/config/: load_test.example.toml
crates/load_tests/src/: config.rs  lib.rs  main.rs
crates/load_tests/src/scenarios/: auth_flow.rs  browse_flow.rs  mod.rs
runner/: Cargo.toml
runner/src/: main.rs
