[package]
name = "api_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
lib_test_helpers = { path = "../lib_test_helpers" }
anyhow = "1"
