[package]
name = "api_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
lib_test_helpers = { path = "../lib_test_helpers" }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
fake = { version = "2.9", features = ["derive", "chrono"] }
rand = "0.8"
once_cell = "1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
