[package]
name = "e2e_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
thirtyfour = "0.32"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
lib_test_helpers = { path = "../lib_test_helpers" }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
rand="0.8"
