[package]
name = "lib_test_helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
anyhow = "1"
once_cell = "1"
thirtyfour = "0.32"
wait-timeout = "0.2"